force-app/main/default/objects/FS_Cartridge__c/FS_Cartridge__c.object-meta.xml
<CustomObject>
    <label>Cartridge</label>
    <nameField>
        <label>Cartridge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cartridges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>