force-app/main/default/objects/FS_Cartridge__c/fields/FS_Agitation__c.field-meta.xml
<CustomField>
    <fullName>FS_Agitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agitation</label>
    <type>Checkbox</type>
</CustomField>