force-app/main/default/objects/FS_Cartridge__c/fields/FS_Airwatch_Flag__c.field-meta.xml
<CustomField>
    <fullName>FS_Airwatch_Flag__c</fullName>
    <description>Aw flagg</description>
    <label>Airwatch Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>