force-app/main/default/objects/FS_Cartridge__c/fields/FS_Available_for_commercial_use__c.field-meta.xml
<CustomField>
    <fullName>FS_Available_for_commercial_use__c</fullName>
    <formula>FS_Effective_Date__c &lt;= today() &amp;&amp; (ISNULL(FS_Effective_End_Date__c )|| FS_Effective_End_Date__c &gt;today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Depends on Start and End Dates</inlineHelpText>
    <label>Available for Commercial Use</label>
    <type>Checkbox</type>
</CustomField>