force-app/main/default/objects/FS_Cartridge__c/fields/FS_Brand__c.field-meta.xml
<CustomField>
    <fullName>FS_Brand__c</fullName>
    <label>Brand</label>
    <length>50</length>
    <type>Text</type>
</CustomField>