force-app/main/default/objects/FS_Cartridge__c/fields/FS_Brand_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Brand_Code__c</fullName>
    <label>Brand Code (MG3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>