force-app/main/default/objects/FS_Cartridge__c/fields/FS_Cartridge_Construction__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Construction__c</fullName>
    <label>Cartridge Construction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>