force-app/main/default/objects/FS_Cartridge__c/fields/FS_Cartridge_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Name__c</fullName>
    <description>This needs to be deleted</description>
    <label>Cartridge  Full Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>