force-app/main/default/objects/FS_Cartridge__c/fields/FS_Cartridge_type__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_type__c</fullName>
    <label>Cartridge type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Speciality</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>