force-app/main/default/objects/FS_Cartridge__c/fields/FS_CartridgeId__c.field-meta.xml
<CustomField>
    <fullName>FS_CartridgeId__c</fullName>
    <label>Cartridge Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>