force-app/main/default/objects/FS_Cartridge__c/fields/FS_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>