force-app/main/default/objects/FS_Cartridge__c/fields/FS_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Effective_Date__c</fullName>
    <inlineHelpText>Date when Cartridge becomes available for commercial use</inlineHelpText>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>