force-app/main/default/objects/FS_Cartridge__c/fields/FS_FET_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_FET_Name__c</fullName>
    <label>FET Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>