force-app/main/default/objects/FS_Cartridge__c/fields/FS_FET_SAP_Material_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_FET_SAP_Material_Id__c</fullName>
    <description>Used as material ID of a Cartridge filled by Knowledge User</description>
    <label>FET SAP Material Id</label>
    <type>TextArea</type>
</CustomField>