force-app/main/default/objects/FS_Cartridge__c/fields/FS_Flavor__c.field-meta.xml
<CustomField>
    <fullName>FS_Flavor__c</fullName>
    <label>Flavor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>