force-app/main/default/objects/FS_Cartridge__c/fields/FS_Is_Cartridge_Single_or_Double__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Cartridge_Single_or_Double__c</fullName>
    <label>Is Cartridge Single or Double</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>