force-app/main/default/objects/FS_Cartridge__c/fields/FS_IsCartridge_Archived__c.field-meta.xml
<CustomField>
    <fullName>FS_IsCartridge_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCartridgeArchived</label>
    <type>Checkbox</type>
</CustomField>