force-app/main/default/objects/FS_Cartridge__c/fields/FS_Platform__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform__c</fullName>
    <description>Platform</description>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>7000</fullName>
            </value>
            <value>
                <fullName>8000</fullName>
            </value>
            <value>
                <fullName>9000</fullName>
            </value>
            <value>
                <fullName>9100</fullName>
            </value>
            <value>
                <fullName>3100</fullName>
            </value>
            <value>
                <fullName>6000</fullName>
            </value>
            <value>
                <fullName>7100</fullName>
            </value>
            <value>
                <fullName>6050</fullName>
                <isActive>false</isActive>
                <label>6050</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>