force-app/main/default/objects/FS_Cartridge__c/fields/FS_Ready_for_Selection__c.field-meta.xml
<CustomField>
    <fullName>FS_Ready_for_Selection__c</fullName>
    <label>Ready for Selection</label>
    <type>Date</type>
</CustomField>