force-app/main/default/objects/FS_Cartridge__c/fields/FS_RFID__c.field-meta.xml
<CustomField>
    <fullName>FS_RFID__c</fullName>
    <label>RFID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>