force-app/main/default/objects/FS_Cartridge__c/fields/FS_RFID_and_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_RFID_and_Version__c</fullName>
    <externalId>true</externalId>
    <label>RFID and Version #</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>