force-app/main/default/objects/FS_Cartridge__c/fields/FS_SAP_MaterialId__c.field-meta.xml
<CustomField>
    <fullName>FS_SAP_MaterialId__c</fullName>
    <label>CMS SAP Material Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>