force-app/main/default/objects/FS_Cartridge__c/fields/FS_Slots_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Slots_Number__c</fullName>
    <label>Cartridge Slots</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>