force-app/main/default/objects/FS_Cartridge__c/fields/FS_Version__c.field-meta.xml
<CustomField>
    <fullName>FS_Version__c</fullName>
    <label>Version</label>
    <length>2</length>
    <type>Text</type>
</CustomField>