force-app/main/default/objects/FS_Cartridge__c/fields/Part_Display__c.field-meta.xml
<CustomField>
    <fullName>Part_Display__c</fullName>
    <label>Part Display</label>
    <length>40</length>
    <type>Text</type>
</CustomField>