force-app/main/default/objects/FS_Cartridge__c/fields/PartID__c.field-meta.xml
<CustomField>
    <fullName>PartID__c</fullName>
    <label>Part ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>