force-app/main/default/objects/FS_Cartridge__c/validationRules/Available_for_Commercial_use_is_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Available_for_Commercial_use_is_checked</fullName>
    <active>true</active>
    <description>Cartridge can either be available for commercial use OR archived, not both</description>
    <errorConditionFormula>FS_Available_for_commercial_use__c==TRUE &amp;&amp; FS_IsCartridge_Archived__c == TRUE</errorConditionFormula>
    <errorDisplayField>FS_IsCartridge_Archived__c</errorDisplayField>
    <errorMessage>Cartridge cannot be archived when the Available for Commercial Use is checked</errorMessage>
</ValidationRule>