force-app/main/default/objects/FS_Cartridge__c/validationRules/Country_and_Platform_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_and_Platform_Mandatory</fullName>
    <active>true</active>
    <description>The Cartridges coming from CMS should be associated with at least one country and one platform.</description>
    <errorConditionFormula>OR(ISBLANK(FS_Platform__c), ISBLANK(FS_Country__c), ISNULL(FS_Platform__c),ISNULL(FS_Country__c))</errorConditionFormula>
    <errorMessage>Country and Platform fields are required</errorMessage>
</ValidationRule>