force-app/main/default/objects/FS_Cartridge__c/validationRules/FS_Reason_for_Deactivating.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_Reason_for_Deactivating</fullName>
    <active>true</active>
    <description>When user specifies the Effective End Date, the user should also enter the reason for inactivation</description>
    <errorConditionFormula>And( 
NOT(ISNULL(FS_Effective_End_Date__c )) , ISBLANK(FS_Reason_for_Deactivating__c),!isNew())</errorConditionFormula>
    <errorDisplayField>FS_Reason_for_Deactivating__c</errorDisplayField>
    <errorMessage>Please Enter the reason for inactivation as Effective End Date is selected.</errorMessage>
</ValidationRule>