force-app/main/default/objects/FS_Cartridge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Platform__c</columns>
    <columns>FS_Brand__c</columns>
    <columns>FS_Flavor__c</columns>
    <columns>FS_Available_for_commercial_use__c</columns>
    <columns>FS_Effective_Date__c</columns>
    <columns>FS_SAP_MaterialId__c</columns>
    <columns>FS_FET_SAP_Material_Id__c</columns>
    <columns>FS_Ready_for_Selection__c</columns>
    <columns>FS_RFID_and_Version__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>