force-app/main/default/objects/FS_Cartridge__c/listViews/US.listView-meta.xml
<ListView>
    <fullName>US</fullName>
    <columns>NAME</columns>
    <columns>FS_Platform__c</columns>
    <columns>FS_Brand__c</columns>
    <columns>FS_Country__c</columns>
    <columns>FS_SAP_MaterialId__c</columns>
    <columns>FS_FET_SAP_Material_Id__c</columns>
    <columns>FS_Airwatch_Flag__c</columns>
    <columns>FS_Agitation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FS_Country__c</field>
        <operation>includes</operation>
        <value>US</value>
    </filters>
    <filters>
        <field>FS_Platform__c</field>
        <operation>includes</operation>
        <value>7000,8000,9000</value>
    </filters>
    <label>US Cartridges</label>
</ListView>